--- a/templates/calcul/operation/elements/bilan.html.twig
+++ b/templates/calcul/operation/elements/bilan.html.twig
@@ -5,7 +5,7 @@
 
 <div class="card h-100">
     <div class="card-body">
-        <h4 class="card-title col-12 text-center">Wallet</h4>
+        <h4 class="card-title col-12 text-center">Bilan</h4>
         <div class="row">
             <div class="col-12">
                 <div class="card-text">Wallet</div>
