--- a/templates/calcul/operation/elements/earn.html.twig
+++ b/templates/calcul/operation/elements/earn.html.twig
@@ -7,6 +7,11 @@
         <h4 class="card-title col-12 text-center">Earn</h4>
         <div class="row">
             <div class="col-12">
+                <a class="btn btn-primary shadow" href="{{path('ics_crypto_calcul_operation_add')}}"><i class="fas fa-plus-circle"></i> Ajouter une opération</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
                 <div class="card-text">Earn solde</div>
                 <div class="card-text">Bloquer</div>
                 <div class="card-text">Liste des earns</div>
