--- a/templates/calcul/operation/elements/wallet.html.twig
+++ b/templates/calcul/operation/elements/wallet.html.twig
@@ -7,6 +7,11 @@
         <h4 class="card-title col-12 text-center">Wallet</h4>
         <div class="row">
             <div class="col-12">
+                <a class="btn btn-primary shadow" href="{{path('ics_crypto_calcul_operation_add')}}"><i class="fas fa-plus-circle"></i> Ajouter une opération</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
                 <div class="card-text">Wallet solde</div>
                 <div class="card-text">liste Token</div>
                 <div class="card-text">Achat</div>
