--- a/templates/sidebar/sidebar.html.twig
+++ b/templates/sidebar/sidebar.html.twig
@@ -20,6 +20,6 @@
         <a href="{{path('ics_crypto_capitalisation')}}" class="list-group-item"><i class="fa fa-info"></i> Les 100 cryptos</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-file-import"></i> Import</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-file-export"></i> Export</a>
-        <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-user-cog"></i> Admin</a>
+        <a href="{{path('ics_crypto_administration')}}" class="list-group-item"><i class="fas fa-user-cog"></i> Admin Référence</a>
     </nav>
 </div>
