--- a/templates/calcul/operation/elements/supercharge.html.twig
+++ b/templates/calcul/operation/elements/supercharge.html.twig
@@ -4,7 +4,16 @@
 
 <div class="card h-100">
     <div class="card-body">
-        <h4 class="card-title col-12 text-center">Supercharge</h4>
+    <div class="row">
+        <div class="col-12">
+            <h4 class="card-title col-12 text-center">Supercharge</h4>
+        </div>
+    </div>
+        <div class="row">
+            <div class="col-12">
+                <a class="btn btn-primary shadow" href="{{path('ics_crypto_calcul_operation_add')}}"><i class="fas fa-plus-circle"></i> Ajouter une opération</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12">
                 <div class="card-text">Supercharge solde</div>
