--- a/templates/calcul/operation/form/form.html.twig
+++ b/templates/calcul/operation/form/form.html.twig
@@ -9,6 +9,8 @@
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
+{# {{ form_row(form.date) }} #}
+
         <button class="btn">{{ button_label|default('Save') }}</button>
     {{ form_end(form) }}
 
