--- a/templates/calcul/operation/index.html.twig
+++ b/templates/calcul/operation/index.html.twig
@@ -5,36 +5,36 @@
 {% block title %}Crypto - Opération{% endblock %}
 
 {% block main %}
-<pre>
-    {{ dump(operations) }}
-</pre>
     <h1 class="text-center text-light">Opération</h1>
-    <div class="row ">
+    <div class="row">
         <div class="col-12">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-2 alert-secondary">
-                            {% include '@Crypto/calcul/operation/elements/wallet.html.twig' %}
-                        </div>
-                        <div class="col-3 alert-warning">
-                            {% include '@Crypto/calcul/operation/elements/earn.html.twig' %}
-                        </div>
-                        <div class="col-3 alert-warning">
-                            {% include '@Crypto/calcul/operation/elements/supercharge.html.twig' %}
-                        </div>
-                        <div class="col-4 alert-primary">
-                            <div class="card col-12 mb-3">
-                                <div class="card-body"> 
-                                    {% include '@Crypto/calcul/operation/elements/bilan.html.twig' %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="d-flex bd-highlight mb-3">
+                <div class="p-2 bd-highlight">
+                    <a class="btn btn-secondary shadow" href="{{path('ics_crypto_dashboard')}}"><i class="fas fa-undo"></i> Dashbord</a>
+                </div>
+                <div class="ms-auto p-2 bd-highlight">
+                    <a class="btn btn-primary shadow" href="{{path('ics_crypto_calcul_operation_add')}}"><i class="fas fa-plus-circle"></i> Ajouter une opération</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                {% include '@Crypto/calcul/operation/elements/wallet.html.twig' %}
+            </div>
+            <div class="col-3">
+                {% include '@Crypto/calcul/operation/elements/earn.html.twig' %}
+            </div>
+            <div class="col-3">
+                {% include '@Crypto/calcul/operation/elements/supercharge.html.twig' %}
+            </div>
+            <div class="col-3">
+                {% include '@Crypto/calcul/operation/elements/bilan.html.twig' %}
+            </div>
+        </div>
+    </div>
+    {# <div class="row">
         <div class="col-12">
             <div class="container">
                 <div class="row alert-info">
@@ -45,5 +45,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> #}
 {% endblock %}
